# suito

./: .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_SETUP.md  flutter_rust_bridge.yaml  generate.sh  pubspec.yaml
.cursor/: mcp.json
.cursor/rules/: architecture.mdc  bitcoin.mdc  core.mdc  flutter-dart.mdc  leaf-node.mdc  nostr.mdc  rust.mdc  security.mdc
.github/workflows/: ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
docs/: ARCHITECTURE.md  FEATURES.md  LEAF_NODE_STRATEGY.md  ROADMAP.md  SECURITY_PRIVACY.md
lib/: hive_registrar.g.dart  main.dart
lib/core/common/: failure.dart  failure.freezed.dart  usecase.dart
lib/core/common/value_objects/: currency.dart  money.dart  money.freezed.dart  money.g.dart  transaction_id.dart  transaction_id.freezed.dart  transaction_id.g.dart
lib/features/bitcoin/application/usecases/: create_bitcoin_record_usecase.dart
lib/features/bitcoin/domain/entities/: bitcoin_record_snapshot.dart  (+2 more)
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: bitcoin.dart  exchange.dart  greet.dart  nostr.dart
prompts/: 01_scaffold.md  02_phase0_contracts.md  03_phase1_parallel_workers.md  04_phase2_presentation.md  05_phase3_integration.md  06_feature_calendar.md  07_feature_exchange_btc.md  08_feature_nostr_sync.md  09_feature_receipt_ocr.md
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: bitcoin.rs  exchange.rs  greet.rs  mod.rs  nostr.rs
rust/src/nostr/: mod.rs
test/: widget_test.dart
(+124 files in other folders)
