[package]
name = "suito_rust"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
# flutter_rust_bridge のマクロが内部で frb_expand cfg を参照するため、
# 未知の cfg として警告されないように既知扱いにする。
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
